[package]
name = "tito"
version = "0.1.3"
edition = "2021"
description = "A flexible database layer built on top of TiKV with powerful indexing strategies and relationship modeling"
license = "Apache-2.0"
authors = ["0xDjole 0xdjole@gmail.com"]

# GitHub metadata
repository = "https://github.com/0xDjole/Tito"
homepage = "https://github.com/0xDjole/Tito"
documentation = "https://github.com/0xDjole/Tito"

keywords = ["database", "tikv", "nosql", "indexing"]
categories = ["database", "database-implementations"]

[dependencies]
# Async and futures
tokio = { version = "1.6", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Database and storage
tikv-client = "0.3"


# Utilities
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
thiserror = "1.0"
log = "0.4"
rand = "0.8"
base64 = "0.22.0"
regex = "1"
typed-builder = "0.10"
